[bumpversion]
commit = True
current_version = 0.1.1
files = aiopeewee.py
tag = True
tag_name = {new_version}
message = build(version): {current_version} -> {new_version}

[wheel]
python-tag = py3

[metadata]
name = aio-peewee
version = attr: aiopeewee.__version__
url = https://github.com/klen/aio-peewee
description = Peewee support for async frameworks (Asyncio, Trio)
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = peewee, asyncio, trio, asgi
project_urls = 
	Documentation = https://github.com/klen/aio-peewee
	Source code = https://github.com/klen/aio-peewee
	Issue tracker = https://github.com/klen/aio-peewee/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: AsyncIO
	Framework :: Trio

[options]
zip_safe = False
py_modules = aiopeewee
python_requires = >=3.7
install_requires = 
	anyio
	peewee > 3

[options.extras_require]
test = 
	pytest
	trio

[tool:pytest]
addopts = -xsv
