[wheel]
python-tag = py3

[metadata]
name = aio-peewee
version = attr: aiopeewee.__version__
url = https://github.com/klen/aio-peewee
description = Peewee support for async frameworks (Asyncio, Trio)
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = peewee, asyncio, trio, asgi
project_urls = 
	Documentation = https://github.com/klen/aio-peewee
	Source code = https://github.com/klen/aio-peewee
	Issue tracker = https://github.com/klen/aio-peewee/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: AsyncIO
	Framework :: Trio

[options]
packages = aiopeewee,
python_requires = >=3.7
install_requires = 
	peewee > 3
	sniffio

[options.package_data]
aiopeewee = 
	py.typed

[options.extras_require]
tests = 
	asgi-tools >= 0.40
	pytest
	pytest-mypy
	pytest-aio[curio,trio]

[tool:pytest]
addopts = -xsv --mypy

[mypy]
ignore_missing_imports = True

[pylama]
ignore = D213

[pylama:tests.py]
ignore = D

[tox:tox]
envlist = py37,py38,py39

[testenv]
deps = -e .[tests]
commands = 
	pytest tests.py
